# leap

./: .deepsource.toml  Cargo.toml  LICENSE  README.md  install.sh  test.sh
 .github/workflows/: ci.yml  release.yml
.github/workflows/: ci.yml
src/: dirs.rs  logging.rs  main.rs
src/appimage/: catalog.rs  database.rs  github.rs  install.rs  mod.rs  remove.rs  update.rs
src/cli/: dialog.rs  mod.rs
src/cli/install/: mod.rs
