[package]
name = "leap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.2"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
reqwest = { version = "0.11.12", features = ["blocking"] }
