[package]
name = "leap"
version = "0.1.0"
edition = "2021"
authors = ["lynx"]
description = "🛸 Fast & Simple AppImage package manager "
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.2"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
reqwest = { version = "0.11.12", features = ["blocking"] }
clap = { version = "4.0.4", features = ["derive"] }
fern = { version = "0.6.1", features = ["colored"] }
log = "0.4.14"
